[tool.poetry]
name = "ccns-sa-docs"
version = "0.1.0"
description = "CCNS SA Docs Archives"
authors = ["r2"]
license = "CC-BY-SA 4.0"
#readme = "README.md"
packages = [{include = "docs"}]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.4.0"
mkdocs-material-extensions = "^1.0.3"
pymdown-extensions = "^9.6"
mkdocs-material = "^8.5.6"
poetryup = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
